Global fix after first review.

--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
-{% block title %}Дневник. 1.0. Категории{% endblock %}
+{% block title %}Дневник. 1.0. Категории {{ category_name }}{% endblock %}
 
-{% block content %}<h2>Публикации в категории - {{ slug }}</h2>{% endblock %}
+{% block content %}<h2>Публикации в категории - {{ category_name }}</h2>{% endblock %}
