--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Дневник. 1.0. Страница поста{% endblock %}
+{% block title %}Дневник. 1.0. Страница поста {{ post.location }}{% endblock %}
 
 {% block content %}
-  <h3>{{ post.location }}</h3>
-  <p>{{ post.date }}</p>
-  <p>{{ post.category }}</p>
-  <p>{{ post.text }}</p>
+  <div class="container">
+    <h3>{{ post.location }}</h3>
+    <hr>
+    <p>{{ post.date }}</p>
+    <p>{{ post.category }}</p>
+    <br>
+    <p>{{ post.text|linebreaksbr }}</p>
+  </div>
 {% endblock %}
