--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -3,17 +3,16 @@
 {% block title %}Дневник. 1.0. Лента постов{% endblock %}
 
 {% block content %}
-  <h2>Лента записей</h2>
-  {% for post in index %}
-    <ul class="border-top">
-      <li><p>Место: {{ post.location }}</p>
-      <li><p>Дата: {{ post.date }}</p>
-      <li><p>Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a></p>
-      <p>{{ post.text|truncatewords:10 }}</p>
-      <a href="{% url 'blog:post_detail' post.id %}">Читать дальше</a>
-    {% if not forloop.last %}
-    {% endif %}
-    </ul>
-    <br>
-  {% endfor %}
+  <article>
+    <h2>Лента записей</h2>
+    {% for post in main_posts %}
+      <ul class="border-top">
+        <li><p>Место: {{ post.location }}</p>
+        <li><p>Дата: {{ post.date }}</p>
+        <li><p>Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a></p>
+        <p>{{ post.text|truncatewords:10 }}</p>
+        <a href="{% url 'blog:post_detail' post.id %}">Читать дальше</a>
+      </ul>
+    {% endfor %}
+    </article>
 {% endblock %}
