--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-<header class="nav navbar-collapse">
+<header class="nav navbar-left">
   <img src="{% static 'logo1.png' %}" width="25" height="25" alt="Логотип колба">
   <nav>
     <ul class="nav navbar">
